# GaloisCPP

./: .gitignore  CMakeLists.txt  main.cpp
api/: galoiscpp.h
include/: aux.h  galoiscpp.h  gfalgorithms.h  gfelement.h  typedefs.h
src/: CMakeLists.txt
src/Algorithms/: CMakeLists.txt  gfalgorithms.cpp  gfalgorithms.h
src/Arith/: CMakeLists.txt  modular_arith.cpp  modular_arith.h  polynomial_arith.cpp  polynomial_arith.h
src/Aux/: CMakeLists.txt  representations.cpp  representations.h
src/Auxillary/: CMakeLists.txt  misc.hpp  representations.cpp  representations.h  structures.h
src/Codec/: CMakeLists.txt  remainder_code.cpp  remainder_code.h
src/GFelement/: CMakeLists.txt  gfelement.cpp  gfelement.h
src/GFpoly/: CMakeLists.txt  gfpoly.cpp  gfpoly.h  representations.cpp  representations.h
src/GaloisField/: CMakeLists.txt  galois_field_prime.cpp  galois_field_prime.h  galoisfield.cpp  galoisfield.h  irreducible_poly.hpp
